# TFHIC

./: .clang-format  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE  README.md
.github/workflow/: ci.yml
aux/: All_to_Proton_CE.root  GraphFromDat.cpp  GraphFromDatNew.cpp  HEPData-ins1222333-v1-Table_31.root  HistoFromDat.cpp  HistoFromDat2.cpp  VCSM_CE-to-GCE.root  VCSM_SCE-to-GCE.root  blastwave_dNdpT_dev.cpp  canvas0.root  canvas1.root  data_TableIV.csv  output.root
auxiliary/: CustomGraph.cpp  GraphFromDatNew.cpp  csv_to_root.cpp
auxiliary/obsolete/: blastwave_dNdpT.cpp  blastwave_dNdpT_cpp.d  blastwave_dNdpT_cpp_ACLiC_dict_rdict.pcm  blastwave_integral.cpp  blastwave_integral_cpp.d
blastwave/: Makefile  README.md  test.cpp
blastwave/data/: HEPData-ins1222333-v1-Table_31.root  HEPData-ins1222333-v1-Table_32.root  HEPData-ins1222333-v1-root.root  data_TableIV.root
blastwave/include/: blastwave_utils.h  hadron_list.h  io_utils.h
blastwave/src/: blastwave_dNdpT_dev (Copy).cpp  blastwave_utils.cpp  hadron_list.cpp  io_utils.cpp
conf/: All_to_Pion.txt  All_to_Proton.txt  H3La\He3_La\P.txt  H3La\He3_La\P_custom.txt  _AnalysisConfig.config  _AnalysisConfig_To-Proton.config
docs/: README.md  physics.md
docs/plots/: All_to_Pion_CE_toGCE.root  All_to_Pion_SCE_toGCE.root  H3La|He3_La|P.root  compare_GCE_k3.0_graph.root
src/: CMakeLists.txt  TF_CSM-vs-dNpidy.cpp  TF_gsCSM-vs-dNpidy.cpp  TFsample.cpp
thermal yields/: .gitignore
thermal yields/conf/: _AnalysisConfig_To-Pion.config
thermal_yields/: README.md
thermal_yields/conf/: _AnalysisConfig.config  _AnalysisConfig_H3La_He3.config
thermal_yields/src/: CMakeLists.txt  TF_CSM-vs-Vc.cpp  TF_VCSM-vs-dNpidy.cpp
